bin/test/fixtures/public/fail/semantic/ourTests/varInitWhile.jmm
/*  REASON:
    Variable "j" is undefined.
*/

class VarNotInit {
    public static void main(String[] a) {
        int i;
        int j;
        int k;
        int c;
        c = 2;
        k = 2;

        while (c<1) {
            j=9;
            c=c+1;
        }

        i=j+k;
    }
}